"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2010-10-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-32:
	  hacprsim: safeguard against ill-effects of aliasing data-rails
		in prsim channels by rejecting them with a diagnostic.
	  Added test cases.


2010-10-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-31:
	  Create dumps now print implicit attributes for channels,
		needed for debugging new diagnostic bug.
		No functional change this revision.  Test cases updated.


2010-09-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-30:
	  HAC: now supports optional string message with SPEC invariants, 
		e.g.: $(x | y, "one of these must be true at all times!")
		parser, AST, middle-end updated, object version bumped.
	  hacprsim: prints all invariant-related diagnostics
		with the optional invariant strings.
	  Test cases added.


2010-09-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-29:
	  hacknet:
		added support for spectre formatting
			use -f output_format=spectre command-line option,
			also config-file option.
		added ability to emit passive devices (untested)
			also configuratble electrical units for
			resistance, capacitance, inductance.
		now configurable: 'x' card for subckt instances, 
			'M' card for transistors and modeled devices.
		Texinfo documented and tested, with new test cases added.


2010-09-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-28:
	  hacprsim: added support for simulating event upsets, 
		and freezing nodes, thawing nodes, killing events.
		new commands:
		dequeue node -- uesr kill of event in event queue
		freeze node -- halts switching activity on node
		thaw node -- resume switching activity, same as 'unset'
		upset node val -- same as setf; freeze