@@ -9,6 +9,7 @@ emit_parasitics=0
 emit_top=1
 empty_subcircuits=0
 fet_diff_overhang=6
+fet_perimeter_gate_edge=1
 fet_spacing_diffonly=4
 inductance_unit=
 instance_port_style=spice
